# ttHMultiAna

./: .asetup.save  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  LHEweights.patch  MissingTauTrackLinks.patch  README  README.md  README.rst  addPromptLeptonIsoSFs.patch  infile_data.txt  newTauEffNPs.patch  restructuring.md  setupRCandGrid.sh  setupScriptsAndPackages.sh
Root/: .SelectTaus.cxx.swp  BDTGNode.cxx  CalculateSF.cxx  ClassifyHF.cxx  CountHisto.cxx  DecorateElectons.cxx  DecorateMuons.cxx  DecorateTaus.cxx  DummyOverlapRemoval.cxx  DuplicateSelector.cxx  ElectronLikelihoodMC15.cxx  LeptonMirroring.cxx  LinkDef.h  LinkDef.h~  MLLSFWinSelector.cxx  MultilepEventSelector.cxx  MuonMC15.cxx  NLeptonPlusTauSelector.cxx  NLeptonSelector.cxx  ReadBDTG.cxx  RemoveOSDilepNoTauSelector.cxx  SelectElectrons.cxx  SelectJets.cxx  SelectMuons.cxx  SelectOR.cxx  SelectTaus.cxx  SelectTruthParticles.cxx  SignalRegionPreselection.cxx  TauMC15.cxx  TauMirroring.cxx  TruthMatchAlgo.cxx  TruthSelector.cxx  Variables.cxx  ttHMLAsgHelper.cxx  ttHMLCreateEvent.cxx  ttHMultileptonElectronLikelihoodDC14.cxx  ttHMultileptonEventSaver.cxx  ttHMultileptonLoader.cxx  ttHMultileptonLooseEventSaver.cxx  ttHMultileptonLooseEventSaver_Decorate.cxx  (+3 more)
Tutorial/: CMakeLists.txt  README.md
cmt/: Makefile.RootCore
data/: 345672_preselections_FlavourComposition.root  345874_preselections_FlavourComposition.root  345875_preselections_FlavourComposition.root  410218_preselections_FlavourComposition.root  410219_preselections_FlavourComposition.root  410220_preselections_FlavourComposition.root  410472_preselections_FlavourComposition.root  410501_preselections_FlavourComposition.root  413008_preselections_FlavourComposition.root  ECIDS_20161125for2017Moriond.root  EleBDT_tau_selection.conf  EleOLR_tau_selection.conf  NTUP_PILEUP.15693023._000003.pool.root.1  Xsection13TeV_tth_bkg_v1.txt  data15_13TeV.periodAllYear_DetStatus-v64-pro19_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml  data16_13TeV.periodAllYear_DetStatus-v76-pro20-01_DQDefects-00-02-02_PHYS_StandardGRL_All_Good.xml  data16_13TeV.periodAllYear_DetStatus-v79-pro20-06_DQDefects-00-02-02_PHYS_StandardGRL_All_Good_25ns.xml  loose_tau_selection.conf  (+208 more)
(+246 files in other folders)
